# Website_Scraper

./: README.md  pyproject.toml
.streamlit/: config.toml
src/: crawler.py  main.py  streamlit_app.py
